@@ -1,3 +1,12 @@
+2008-10-4  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* doc/GetIndex.3:			CONSTified the tablePtr argument
+	* generic/tcl.decls:		of Tcl_GetIndexFromObj.
+	* generic/tclIndexObj.c
+	* ChangeLog
+	* generic/tclDecls.h:		regenerated
+	This change complies with TIP #27.
+
 2008-10-03  Miguel Sofer  <msofer@users.sf.net>
 
 	* tests/stack.test:
